# nedlang

.claude/commands/: attack.md  frontend.md  nocode.md  worktree.md
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/api/: convo.py  hobby_map.py  lang_map.py  lesson.py  motivation_map.py  sample.py
backend/api/reception/: grading.py  test.py
backend/api/user/: handler.py
backend/database/: lingua_ai.db  schema.py  script.py  view.py
docs/: database_schema.md  engineering_rules.md  product_spec.md  project_governance.md  todo.md
frontend/: package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/components/dashboard/: Achievements.tsx  Assessments.tsx  CertificationProgress.tsx  CurriculumProgress.tsx  DashboardNav.tsx  ErrorAnalysis.tsx  GrammarAnalytics.tsx  HeroProgress.tsx  LearningStats.tsx  LevelCard.tsx  PersonalizedInsights.tsx  RecommendedActions.tsx  SkillMastery.tsx  StreakCard.tsx  VocabularyAnalytics.tsx  mockData.ts
frontend/app/components/landing/: Footer.tsx  FrameworkSection.tsx  GamifiedSection.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Testimonials.tsx
frontend/app/dashboard/: page.tsx
frontend/app/lib/: testSession.ts
frontend/app/reception/: page.tsx
frontend/i18n/: LanguageProvider.tsx  README.md  translations.ts
frontend/i18n/translations_ts/: auth.ts  common.ts  dashboard.ts  index.ts  landing.ts  lesson.ts  onboarding.ts  reception.ts
(+48 files in other folders)
