[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "openai>=2.40.0",
    "pydantic-settings>=2.14.1",
    "streamlit>=1.58.0",
    "uvicorn>=0.48.0",
]
